--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -20,24 +20,48 @@
       <section id="monster" class="container">
         <h2>Monster Health</h2>
         <div class="healthbar">
-          <div class="healthbar__value"></div>
+          <div class="healthbar__value" :style="{width:monsterBarStyles}"></div>
         </div>
       </section>
       <section id="player" class="container">
         <h2>Your Health</h2>
         <div class="healthbar">
-          <div class="healthbar__value"></div>
+          <div class="healthbar__value" :style="{width:playerBarStyles}"></div>
         </div>
       </section>
-      <section id="controls">
-        <button>ATTACK</button>
-        <button>SPECIAL ATTACK</button>
-        <button>HEAL</button>
-        <button>SURRENDER</button>
+      <section v-if="gameRunning" id="controls">
+        <button @click="performAction(userAttack)">ATTACK</button>
+        <button
+          v-show="specialAttackReady"
+          @click="performAction(specialAttack)"
+        >
+          SPECIAL ATTACK
+        </button>
+        <button
+          v-show="!specialAttackReady"
+          @click="performAction(specialAttack)"
+          disabled
+        >
+          SPECIAL ATTACK
+        </button>
+        <button @click="performAction(heal)">HEAL</button>
+        <button @click="surrender">SURRENDER</button>
+      </section>
+      <section class="container" v-else-if="userWon">
+        <h1>Congratulation!</h1>
+        <h2>You won!</h2>
+        <button @click="newGame">Start New Game</button>
+      </section>
+      <section class="container" v-else>
+        <h1>Game Over!</h1>
+        <h2>You lost!</h2>
+        <button @click="newGame">Start New Game</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li v-for="log in battleLog" v-html="log"></li>
+        </ul>
       </section>
     </div>
   </body>
